# ComfyUI-IdeogramHelper

./: .gitignore  README.md  __init__.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.mts
backend/: __init__.py  io_types.py
backend/nodes/: __init__.py  bbox_select.py  caption_preview.py  element_append.py  element_override.py  extras.py  json_sync.py  override.py  override_list.py  palette.py  ref_sync.py  studio.py
backend/server/: __init__.py  api.py
backend/utils/: __init__.py  caption.py  overlay.py  overrides.py
js/: main.js
nodes/: __init__.py  caption.py  ideogram_studio.py  overlay.py  overrides.py  refsync.py
src/: main.ts  shims-vue.d.ts
src/components/: BBoxCanvas.vue  ElementEditor.vue  ElementList.vue  IdeogramStudio.vue  JsonPreview.vue  PaletteEditor.vue  StylePanel.vue
src/components/editor/: BBoxCanvas.vue  ComboInput.vue  ElementContextMenu.vue  ElementEditor.vue  ElementList.vue  PaletteEditor.vue  PromptFields.vue  StylePanel.vue
src/components/studio/: IdeogramStudio.vue  JsonControls.vue  JsonPreview.vue  PaletteNode.vue  StudioLibrary.vue
src/components/ui/: UiButton.vue  UiCard.vue  UiPopover.vue
src/extensions/: scrollFix.ts
src/lib/: api.ts  caption.ts  mountWidget.ts  presets.ts  previewSync.ts  refSync.ts  store.ts
web/: main.js
